--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
               aria-label="Close"
             ></button>
           </div>
-          <div class="modal-body">...</div>
+          <div class="modal-body post-body">...</div>
+          <div class="modal-body user-email">...</div>
           <div class="modal-footer">
             <button
               type="button"
-              class="btn btn-secondary"
-              data-bs-dismiss="modal"
+              class="btn btn-secondary editBtn"
             >
               Edit
             </button>
