add delete function

--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Título del modal</h5>
-            <input type="text" id="titleModalInput" disabled="true" />
+            <input type="text" class="modal-title h5" id="titleModalInput" disabled="true" />
             <button
               type="button"
               class="btn-close"
@@ -48,7 +47,7 @@
               Save Changes
             </button>
             <button type="button" class="btn btn-secondary editBtn">✎</button>
-            <button type="button" class="btn btn-secondary">🗑</button>
+            <button type="button" class="btn btn-secondary deleteBtn">🗑</button>
           </div>
         </div>
       </div>
