--- a/index.html
+++ b/index.html
@@ -44,27 +44,29 @@
           </div>
           <div class="modal-body post-body"></div>
           <div class="modal-body user-email">...</div>
-          <div class="accordion-item p-3">
-            <h2 class="accordion-header" id="headingTwo">
-              <button
-                class="accordion-button collapsed"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#collapseTwo"
-                aria-expanded="false"
-                aria-controls="collapseTwo"
+          <div class="accordion" id="accordionExample">
+            <div class="accordion-item p-3">
+              <h2 class="accordion-header" id="headingTwo">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseTwo"
+                  aria-expanded="false"
+                  aria-controls="collapseTwo"
+                >
+                  Show comments
+                </button>
+              </h2>
+              <div
+                id="collapseTwo"
+                class="accordion-collapse collapse"
+                aria-labelledby="headingTwo"
+                data-bs-parent="#accordionExample"
               >
-                Show comments ⯆
-              </button>
-            </h2>
-            <div
-              id="collapseTwo"
-              class="accordion-collapse collapse"
-              aria-labelledby="headingTwo"
-              data-bs-parent="#accordionExample"
-            >
-              <div class="accordion-body">
-                <p>añadir comentarios</p>
+                <div class="accordion-body">
+                  <p>añadir comentarios</p>
+                </div>
               </div>
             </div>
           </div>
@@ -78,8 +80,48 @@
             <button type="button" class="btn btn-outline-warning editBtn">
               Edit
             </button>
-            <button type="button" class="btn btn-outline-warning deleteBtn">
+            <button
+              type="button"
+              class="btn btn-outline-warning deleteBtn"
+              data-bs-toggle="modal"
+              data-bs-target="#alertDeleteModal"
+              data-bs-dismiss="modal"
+            >
               Delete
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div
+      class="modal fade"
+      id="alertDeleteModal"
+      tabindex="-1"
+      data-bs-backdrop="static"
+      aria-labelledby="alertDeleteModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-body">
+            <h3>Are you sure to delete this post?</h3>
+          </div>
+          <div class="d-flex flex-row">
+            <button
+              type="button"
+              class="btn btn-secondary confirmDeletePost"
+              data-bs-dismiss="modal"
+            >
+              Yes
+            </button>
+            <button
+              type="button"
+              class="btn btn-primary confirmNoDeletePost"
+              data-bs-dismiss="modal"
+              data-bs-toggle="modal"
+              data-bs-target="#postModal"
+            >
+              No
             </button>
           </div>
         </div>
