--- a/index.html
+++ b/index.html
@@ -42,7 +42,12 @@
               aria-label="Close"
             ></button>
           </div>
-          <div class="modal-body post-body"></div>
+          <textarea 
+          type="text" 
+          class="modal-body post-body" 
+          id="bodyModalInput"
+          disabled="true">
+        </textarea>
           <div class="modal-body user-email">...</div>
           <div class="accordion" id="accordionExample">
             <div class="accordion-item p-3">
