--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-      <h1 class="text-white ms-3">Blog with API</h1>
+      <h1 class="text-white ms-3">B&W</h1>
     </nav>
     <div
       class="modal fade"
@@ -29,12 +29,7 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <input
-              type="text"
-              class="modal-title form-control form-control-lg"
-              id="titleModalInput"
-              disabled="true"
-            />
+            <textarea class="form-control" id="titleModalInput" aria-label="With textarea" disabled="true"></textarea>
             <button
               type="button"
               class="btn-close"
@@ -44,7 +39,7 @@
           </div>
           <textarea 
           type="text" 
-          class="modal-body post-body" 
+          class="form-control modal-body" 
           id="bodyModalInput"
           disabled="true">
         </textarea>
@@ -70,7 +65,7 @@
                 data-bs-parent="#accordionExample"
               >
                 <div class="accordion-body">
-                  <p>añadir comentarios</p>
+                  
                 </div>
               </div>
             </div>
@@ -99,34 +94,34 @@
       </div>
     </div>
     <div
-      class="modal fade"
+      class="modal fade p-5"
       id="alertDeleteModal"
       tabindex="-1"
       data-bs-backdrop="static"
       aria-labelledby="alertDeleteModalLabel"
       aria-hidden="true"
     >
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-body">
+      <div class="modal-dialog p-5">
+        <div class="modal-content p-4 btn-warning">
+          <div class="modal-body d-flex align-center justify-content-center">
             <h3>Are you sure to delete this post?</h3>
           </div>
-          <div class="d-flex flex-row">
+          <div class="d-flex flex-row align-center justify-content-evenly p-3"">
             <button
               type="button"
-              class="btn btn-secondary confirmDeletePost"
+              class="btn btn-dark confirmDeletePost"
               data-bs-dismiss="modal"
             >
-              Yes
+              Accept
             </button>
             <button
               type="button"
-              class="btn btn-primary confirmNoDeletePost"
+              class="btn btn-dark confirmNoDeletePost"
               data-bs-dismiss="modal"
               data-bs-toggle="modal"
               data-bs-target="#postModal"
             >
-              No
+              Cancel
             </button>
           </div>
         </div>
